# person_segmentation_ros

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt
config/: person_segmentation_ros.param.yaml
launch/: person_segmentation_ros.launch.py
person_segmentation_ros/: person_segmentation_ros.py  person_segmentation_ros_node.py
resources/: .gitkeep
test/: test_person_segmentation_ros.py
