<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>person_segmentation_ros</name>
  <version>1.0.0</version>
  <description>Package designed to detect people on image with segmentation and sending data via mqqt to outside services</description>
  <maintainer email="szymon.z.kwiatkowski@gmail.com">Szymon Kwiatkowski</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend>ament_cmake_python</build_depend>

  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
